# InchwormRobot

./: .gitignore  escalador-ws.code-workspace  readme.md
.cache/clangd/index/: MagnetPlugin.cpp.5DB6DA8221E8DCE0.idx  MagnetPlugin.cpp.7422613649E05205.idx  MagnetPlugin.hpp.0F08C4B43F2C8344.idx  MagnetPlugin.hpp.318A9522F0F888F5.idx  dynamixel_driver.cpp.2DD6412E62077BB7.idx  dynamixel_driver.cpp.A477719F1D59F80C.idx  dynamixel_driver.h.935E1F5F354D6730.idx  dynamixel_driver.h.F47B1A3A97A14191.idx  dynamixel_hardware.cpp.7992A02C69ED80BC.idx  dynamixel_hardware.cpp.DE978B7ED4F6094E.idx  dynamixel_hardware.hpp.5DAA44F85788BA10.idx  dynamixel_hardware.hpp.D24C251F9FA4B124.idx  dynamixel_item.cpp.0927573834BC4D3F.idx  dynamixel_item.cpp.C55DA0EBEDED8449.idx  dynamixel_item.h.1DCC7B896DC84B2B.idx  dynamixel_item.h.EFB7778C8FB69443.idx  dynamixel_tool.cpp.95195788067BD932.idx  dynamixel_tool.cpp.C03C034B80A94358.idx  dynamixel_tool.h.6A44EAD373C5C6F3.idx  dynamixel_tool.h.F069C5ACFD1E6207.idx  dynamixel_workbench.cpp.8F596DF931CAEAEC.idx  dynamixel_workbench.cpp.B729EAA55773D095.idx  dynamixel_workbench.h.1DABAFB32B673C5E.idx  dynamixel_workbench.h.E1D21BDAA39E5BD1.idx  ik_kinematics_node.cpp.85C722C0381E47FE.idx  ik_kinematics_node.cpp.9C72D507DD45BD24.idx  visibility_control.h.9C947B9CB8D189D4.idx  visibility_control.h.D3B7C8362FACA2FC.idx  visiblity_control.h.0961E2574E031D9A.idx  visiblity_control.h.5B863F62C3E76E68.idx
install/: local_setup.sh  setup.sh
log/: latest_build
src/dynamixel_hardware/: CMakeLists.txt  dynamixel_hardware.xml  package.xml
src/dynamixel_hardware/GPIO/: gpio_controller.cpp
src/dynamixel_hardware/src/: dynamixel_hardware.cpp
src/escalador-001/: CMakeLists.txt  package.xml
src/escalador-001/gazebo/: model.sdf  world_escalador.sdf
src/escalador-gazebo/: CMakeLists.txt  package.xml
src/escalador-gazebo/launch/: bringup_gazebo.launch.py
src/escalador-gazebo/worlds/: world_area-teste.sdf
src/escalador-gui/: CMakeLists.txt  package.xml
src/escalador-gui/include/escalador-gui/: gui_escalador.h  gui_escalador.ui
src/escalador-gui/src/: gui_escalador.cpp
src/escalador_deploy/: package.xml  setup.cfg  setup.py
src/escalador_deploy/config/: display.rviz
src/escalador_deploy/controllers/: controllers.yaml
src/escalador_deploy/escalador_deploy/: state_publisher.py
src/escalador_deploy/launch/: deploy.launch.py
src/escalador_deploy/urdf/: escalador.urdf.xacro  escalador_ros2_control.xacro
src/escalador_description_both/: package.xml  setup.cfg  setup.py
src/escalador_description_both/launch/: display.launch.py
src/escalador_description_both/meshes/: ON-OFF-PAW-Alumínio_MEF.050.dae  ON-OFF-PAW-Alumínio_MEF.148.dae  link_2.dae  link_4.003.dae
src/escalador_description_both/urdf/: escalador_movel.xacro
src/escalador_description_parallel/: package.xml  setup.cfg  setup.py
src/escalador_description_serial/: package.xml  setup.cfg  setup.py
src/escalador_description_serial/launch/: display.launch.py
src/escalador_description_serial/meshes/: ON-OFF-PAW-Alumínio_MEF.050.dae  ON-OFF-PAW-Alumínio_MEF.148.dae  link_2.dae  link_4.003.dae
src/escalador_description_serial/urdf/: escalador_serial.xacro
src/escalador_description_serial_1/: package.xml  setup.cfg  setup.py
src/escalador_description_serial_1/config/: mvp_6j_controller.yaml  mvp_6j_gz_ign_bridge.yaml  mvp_6j_init_pos.yaml
src/escalador_description_serial_1/controllers/: controllers.yaml
src/escalador_description_serial_1/escalador_description_serial_1/: state_publisher.py  state_subscriber.py
src/escalador_description_serial_1/launch/: bringup.launch.py  bringup1.launch.py  display.launch.py
src/escalador_description_serial_1/meshes/: link_2.dae  link_4.003.dae  pata_1.dae  pata_2.dae
src/escalador_description_serial_1/urdf/: distance_sensor.xacro  escalador_serial_1.urdf.xacro  escalador_serial_1.xacro  escalador_serial_1_control.xacro  escalador_serial_1_description.urdf.xacro  escalador_serial_1_gazebo.urdf.xacro  escalador_serial_1_gz_control.xacro  escalador_serial_1_magnet_config.xacro  escalador_serial_1_ros2_control.xacro  escalador_serial_1_sensors.xacro
src/escalador_description_serial_2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/escalador_description_serial_2/controllers/: controllers.yaml
src/escalador_description_serial_2/escalador_description_serial_2/: state_publisher.py
src/escalador_description_serial_2/launch/: bringup.launch.py  bringup2.launch.py  bringup_gazebo.launch.py  display.launch.py
src/escalador_description_serial_2/meshes/: ON-OFF-PAW-Alumínio_MEF.148.dae  link_2.dae  link_4.003.dae  pata_2.dae
src/escalador_description_serial_2/urdf/: escalador_serial_2.urdf.xacro  escalador_serial_2.xacro  escalador_serial_2_control.xacro  escalador_serial_2_description.urdf.xacro  escalador_serial_2_gazebo.urdf.xacro  escalador_serial_2_gazebo_ros2_control.xacro  escalador_serial_2_ros2_control.xacro
src/escalador_gui/: package.xml  setup.cfg  setup.py
src/escalador_interfaces/: CMakeLists.txt  package.xml
src/escalador_interfaces/msg/: ActualBase.msg  Base.msg
src/escalador_interfaces/srv/: ChangeBase.srv
src/flare_gazebo/: CMakeLists.txt  package.xml
src/flare_gazebo/hooks/: flare_gazebo.dsv.in
src/flare_gazebo/launch/: environment_camera.launch.py  flare_and_camera.launch.py  (+1 more)
src/isi_coltrol_pkg/: package.xml  setup.cfg  setup.py
src/kdl_kin_escalador/: CMakeLists.txt  package.xml
src/kdl_kin_escalador/src/: ik_kinematics_node.cpp
src/magnet_plugin/: CMakeLists.txt  package.xml
src/magnet_plugin/config/: magnet_plugin_gz_ign_bridge.yaml
src/magnet_plugin/hooks/: magnet_plugin.dsv.in
src/magnet_plugin/include/magnet_plugin/: MagnetPlugin.hpp  visibility_control.h
src/magnet_plugin/launch/: magnet_plugin.launch.py
src/magnet_plugin/models/magnets/: model.config  model.sdf
src/magnet_plugin/src/: MagnetPlugin.cpp
src/magnet_plugin/worlds/: world.sdf
src/motion-planning/: package.xml  setup.cfg  setup.py
src/service_change_base/: package.xml  setup.cfg  setup.py
(+12 files in other folders)
