<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>escalador_deploy</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="brenno.domingues@sc.senai.br">brennoisi</maintainer>
  <license>TODO: License declaration</license>


  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>dynamixel_hardware</depend>
  <exec_depend>escalador_interfaces</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
