<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kdl_kin_escalador</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="brennohdomingues@gmail.com">Brenno</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl_vendor</build_depend>
  <build_depend>urdf</build_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
