<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>magnet_plugin</name>
  <version>0.0.1</version>
  <description>Package prepared to simulate the robot's paw/claw magnet</description>
  <maintainer email="alan.cechinel@sc.senai.br">alan.cechinel</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>ignition-cmake2</depend>
  <depend>ignition-gazebo6</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
